Fixed Scrollbar

--- a/css/style.scss
+++ b/css/style.scss
@@ -190,6 +190,4 @@ MENU STYLES
     background-color: #333;
 }
 
-html {
-  overflow:   scroll;
-}
+/*# sourceMappingURL=style.css.map */
